--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/
 
 # Distribution / packaging
 
+.pipirc
 .idea/
 .Python
 env/
@@ -24,7 +25,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
-
+*.db
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
